Fix flicker

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -49,7 +49,7 @@ emoji-picker {
 }
 
 .sludge-input-primary {
-    @apply rounded-lg border border-indigo-200 disabled:bg-neutral-100 disabled:placeholder-neutral-300 text-sm flex-1 dark:bg-zinc-800 dark:disabled:bg-zinc-800 dark:disabled:placeholder-zinc-700 dark:border-none dark:text-red-500;
+    @apply rounded-lg border border-indigo-200 disabled:bg-neutral-100 disabled:placeholder-neutral-300 text-sm flex-1 dark:bg-zinc-800 dark:disabled:bg-zinc-800 dark:disabled:placeholder-zinc-700 dark:border-none dark:text-neutral-400;
 }
 
 .sludge-button-primary {
@@ -65,44 +65,73 @@ emoji-picker {
 }
 
 /* Markdown styling start */
-#stream-viewer-description ul, #stream-viewer-description ol, #message_box ul, #message_box ol, #recording-description ul, #recording-description ol {
+#stream-viewer-description ul,
+#stream-viewer-description ol,
+#message_box ul,
+#message_box ol,
+#recording-description ul,
+#recording-description ol {
     list-style: revert;
     margin: revert;
     padding: revert;
 }
 
-#stream-viewer-description a, #message_box a, #recording-description a, #stream-viewer-title a {
+#stream-viewer-description a,
+#message_box a,
+#recording-description a,
+#stream-viewer-title a {
     @apply underline;
 }
 
-#stream-viewer-description blockquote, #message_box blockquote, #recording-description blockquote {
+#stream-viewer-description blockquote,
+#message_box blockquote,
+#recording-description blockquote {
     @apply border-l-4 border-zinc-300 pl-2 dark:border-zinc-700;
 }
 
 /* not sure about that dark background color in code blocks */
-#stream-viewer-description code, #message_box code, #recording-description code, #stream-viewer-title code {
+#stream-viewer-description code,
+#message_box code,
+#recording-description code,
+#stream-viewer-title code {
     @apply border-[1px] rounded-md px-[2px] bg-zinc-50 border-zinc-300 dark:border-zinc-700 dark:bg-zinc-900;
 }
 
-#stream-viewer-description pre, #message_box pre, #recording-description pre, #stream-viewer-title code  {
+#stream-viewer-description pre,
+#message_box pre,
+#recording-description pre,
+#stream-viewer-title code {
     @apply border-[1px] rounded-md px-[2px] bg-zinc-50 border-zinc-300 dark:border-zinc-700 dark:bg-zinc-900;
 }
 
-#stream-viewer-description pre code, #message_box pre code, #recording-description pre code {
+#stream-viewer-description pre code,
+#message_box pre code,
+#recording-description pre code {
     @apply border-0 bg-transparent;
 }
 
-#stream-viewer-description h1, #message_box h1, #recording-description h1 {
+#stream-viewer-description h1,
+#message_box h1,
+#recording-description h1 {
     @apply text-2xl font-bold;
 }
-#stream-viewer-description h2, #message_box h2, #recording-description h2 {
+
+#stream-viewer-description h2,
+#message_box h2,
+#recording-description h2 {
     @apply text-xl font-bold;
 }
-#stream-viewer-description h3, #message_box h3, #recording-description h3 {
+
+#stream-viewer-description h3,
+#message_box h3,
+#recording-description h3 {
     @apply text-lg font-bold;
 }
 
-#stream-viewer-description p, #message_box p, #recording-description p {
+#stream-viewer-description p,
+#message_box p,
+#recording-description p {
     @apply mb-3 mt-3;
 }
+
 /* Markdown styling end */
